Last minute change

--- a/index.html
+++ b/index.html
@@ -7,27 +7,27 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+
     <div id="calculator">
         <input id="display" readonly>
         <div class="keys">
-            <button onclick="appendToDisplay('7')">7</button>
-            <button onclick="appendToDisplay('8')">8</button>
-            <button onclick="appendToDisplay('9')">9</button>
-            <button class="sign" onclick="appendToDisplay('/')">/</button>
-            <button onclick="appendToDisplay('4')">4</button>
-            <button onclick="appendToDisplay('5')">5</button>
-            <button onclick="appendToDisplay('6')">6</button>
-            <button class="sign" onclick="appendToDisplay('*')">*</button>
-            <button onclick="appendToDisplay('1')">1</button>
-            <button onclick="appendToDisplay('2')">2</button>
-            <button onclick="appendToDisplay('3')">3</button>
-            <button class="sign" onclick="appendToDisplay('-')">-</button>
-            <button onclick="clearDisplay('C')">C</button>
-            <button onclick="appendToDisplay('0')">0</button>
-            <button onclick="appendToDisplay('.')">.</button>
-            <button class="sign" onclick="appendToDisplay('+')">+</button>
-            <button class="sign" id="equal" onclick="evaluateResult('=')">=</button>
+            <button onclick="appendToDisplay('7'); playAudio();">7</button>
+            <button onclick="appendToDisplay('8'); playAudio();">8</button>
+            <button onclick="appendToDisplay('9'); playAudio();">9</button>
+            <button class="sign" onclick="appendToDisplay('/'); playAudio();">/</button>
+            <button onclick="appendToDisplay('4'); playAudio();">4</button>
+            <button onclick="appendToDisplay('5'); playAudio();">5</button>
+            <button onclick="appendToDisplay('6'); playAudio();">6</button>
+            <button class="sign" onclick="appendToDisplay('*'); playAudio();">*</button>
+            <button onclick="appendToDisplay('1'); playAudio();">1</button>
+            <button onclick="appendToDisplay('2'); playAudio();">2</button>
+            <button onclick="appendToDisplay('3'); playAudio();">3</button>
+            <button class="sign" onclick="appendToDisplay('-'); playAudio();">-</button>
+            <button onclick="clearDisplay('C'); playAudio();">C</button>
+            <button onclick="appendToDisplay('0'); playAudio();">0</button>
+            <button onclick="appendToDisplay('.'); playAudio();">.</button>
+            <button class="sign" onclick="appendToDisplay('+'); playAudio();">+</button>
+            <button class="sign" id="equal" onclick="evaluateResult('='); playAudio();">=</button>
         </div>
     </div>
 
